# datasetinsights

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-about-datasetinsights.md  questions.md
.github/workflows/: lint.yml  linting-and-unittests.yaml  publish-docker-hub.yaml  publish-docker-hub.yml  publish-pypi.yaml  publish-pypi.yml  publish_jfrog.yml  sonarqube-scan.yaml  sonarqube.yml  synk-scan.yaml  tests.yml
datasetinsights/: __main__.py  cli.py  constants.py  dashboard.py  main.py  torch_distributed.py
datasetinsights/commands/: __init__.py  convert.py  download.py  evaluate.py  train.py
datasetinsights/configs/: __init__.py  deeplabv3.yaml  densedepth.yaml  faster_rcnn.yaml  faster_rcnn_coco_cat.yaml  faster_rcnn_coco_cat_fine_tune.yaml  faster_rcnn_coco_cat_synthetic.yaml  faster_rcnn_coco_furniture.yaml  faster_rcnn_coco_furniture_synthetic.yaml  faster_rcnn_fine_tune.yaml  faster_rcnn_fine_tune_ab_test.yaml  faster_rcnn_google_groceries_real.yaml  faster_rcnn_groceries_real.yaml  faster_rcnn_synthetic.yaml  faster_rcnn_synthetic_ab_test.yaml  siammask.yaml  vgg_slam.yaml  vgg_slam_c_s.yaml  vgg_slam_multi_objects.yml
datasetinsights/data/: download.py  exceptions.py  transforms.py
datasetinsights/datasets/: .synthetic.py.un~  __init__.py  ab_groceries_real.py  base.py  cityscapes.py  coco.py  exceptions.py  groceries_real.py  kitti.py  nuscenes.py  nyudepth.py  single_cube.py  synthetic.py  synthetic.py~  unity_simulation.py
datasetinsights/estimators/: __init__.py  base.py  builder.py  deeplab.py  densedepth.py  factory.py  faster_rcnn.py  siam_mask.py  vgg_slam.py  vgg_slam_c_s.py  vgg_slam_multi_objects.py
datasetinsights/evaluation_metrics/: __init__.py  average_euler_error.py  average_log10_error.py  average_mean_square_error.py  average_precision.py  average_precision_2d.py  average_precision_2d_bbox.py  average_precision_50iou.py  average_precision_config.py  average_quaternion_error.py  average_recall_2d.py  average_recall_2d_bbox.py  average_relative_error.py  base.py  confusion_matrix.py  exceptions.py  iou.py  mean_average_precision.py  mean_average_precision_2d_bbox.py  mean_average_precision_50iou.py  mean_average_recall.py  mean_average_recall_2d_bbox.py  metrics_utils.py  (+5 more)
docs/: Makefile  README.md  requirements.txt
kubeflow/: README.md  captures_profile.py  compile_pipelines.sh  evaluate_pipeline.py  groceries_real_train.py  pipelines.py  synthdet_train.py  train_pipeline.py  vgg_train_pipeline.py
notebooks/: A_B_Evaluation.ipynb  COCO.ipynb  COCO_Cat_Evaluation.ipynb  Demo_Stats.ipynb  Human_Keypoint_Pose.ipynb  Image_Analysis.ipynb  Model_Performance_Statistics (1).ipynb  Model_Performance_Statistics.ipynb  Model_Performance_Statistics_Comparison-Copy1.ipynb  Object_Detection_Stats.ipynb  Perception_Statistics.ipynb  SynthDet_Evaluation.ipynb  SynthDet_Statistics.ipynb  SynthDet_bounding_box_visualization.ipynb  WebDataset_script.ipynb  human_keypoint_pose.ipynb  object_detection_stats.ipynb
tests/: test_bbox.py  test_checkpoint.py  test_coco_data_visualization.py  test_coco_stats.py  test_compression.py  test_config_handler.py  test_create_downloader.py  test_create_estimator.py  test_dashboard.py  test_download_command.py  test_evaluate_command.py  test_exercise.py  test_faster_rcnn.py  test_faster_rcnn_util.py  test_gcs.py  test_http_downloader.py  test_image_analysis.py  test_keypoints_pose.py  test_keypoints_stats.py  test_kfp_output.py  test_kitti.py  test_laplacian.py  test_loss.py  test_main_entrypoint.py  test_mlflow_tracker.py  test_object_detection_stats.py  test_rcnn.py  test_stats.py  test_train_command.py  test_visual.py
tf-dataflow/: Dockerfile  README.md  main.py  real_data_loader.py  requirements.txt  setup.py
(+271 files in other folders)
