[tool.poetry]
name = "datasetinsights"
version = "0.1.0"
description = "Synthetic dataset insights."
license = "Apache-2.0"
authors = [
  "Unity AI Perception Team <perception@unity3d.com>"
]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Jupyter",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.14"
google-cloud-storage = "^1.24.1"
jupyter = "^1.0.0"
kornia = "^0.1.4"
numpy = ">=1.17 < 1.18"
nuscenes-devkit = ">=1.0.2 <1.0.3"
plotly = "^4.4.1"
pyquaternion = "^0.9.5"
pytorch-ignite = "^0.3.0"
tensorboardx = "^2.0"
torch = "^1.4.0"
torchvision = "^0.5"
yacs = "^0.1.6"
pycocotools = "^2.0.0"
codetiming = "^1.2.0"
pandas = "^1.0.1"
tqdm = "^4.45.0"
dask = {extras = ["complete"], version = "^2.14.0"}
tensorflow = "^1.13.1"
Keras-Applications = "==1.0.7"
Keras-Preprocessing = "^1.1.0"
onnx = "^1.6.1"
onnxconverter-common = "^1.6.1"
onnxmltools = "^1.6.1"
hyperopt = "^0.2.3"
Keras = "^2.2.4"
bayesian-optimization = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.3"
pytest-cov = "^2.8.1"
responses = "^0.10.9"

[tool.black]
line-length = 80
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
